tests/error/ptr_ref_prim.gw
typedef void (my_func)(int @i){}
